Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-43111

Android: Crash when manually setting Android style

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • None
    • 5.4.0
    • QPA
    • None
    • Tested with Qt 5.4.0 release package on Samsung Galaxy Tab 3 (SM-T211), Android 4.1.2.
    • Android
    • 21101d9c52d2b7c6471f9814c9bff5aa87e22afc

    Description

      To reproduce:
      1. Run the Styles example in Qt Widgets
      2. Select the "Android" style in the combo box
      3. BOOM

      This is the stack trace:

      0	QAndroidStyle::subControlRect(QStyle::ComplexControl, QStyleOptionComplex const*, QStyle::SubControl, QWidget const*) const	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Widgets.so		0x5db6607a	
      1	QGroupBoxPrivate::calculateFrame()	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Widgets.so		0x5db875fa	
      2	QGroupBox::changeEvent(QEvent*)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Widgets.so		0x5db87f70	
      3	QWidget::event(QEvent*)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Widgets.so		0x5db2235e	
      4	QGroupBox::event(QEvent*)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Widgets.so		0x5db87dc4	
      5	QApplicationPrivate::notify_helper(QObject*, QEvent*)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Widgets.so		0x5db04242	
      6	QApplication::notify(QObject*, QEvent*)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Widgets.so		0x5db07664	
      7	QCoreApplication::notifyInternal(QObject*, QEvent*)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Core.so		0x5d519408	
      8	QApplication::setStyle(QStyle*)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Widgets.so		0x5db052d6	
      9	WidgetGallery::changeStyle	widgetgallery.cpp	121	0x5dde7700	
      10	WidgetGallery::qt_static_metacall	moc_widgetgallery.cpp	76	0x5dde8d54	
      11	QMetaObject::activate(QObject*, int, int, void**)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Core.so		0x5d538134	
      12	QComboBox::activated(QString const&)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Widgets.so		0x5db715d6	
      13	QComboBoxPrivate::emitActivated(QModelIndex const&)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Widgets.so		0x5db72b64	
      14	QComboBoxPrivate::_q_itemSelected(QModelIndex const&)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Widgets.so		0x5db738c8	
      15	QMetaObject::activate(QObject*, int, int, void**)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Core.so		0x5d538134	
      16	QComboBoxPrivateContainer::itemSelected(QModelIndex const&)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Widgets.so		0x5dc83b84	
      17	QComboBoxPrivateContainer::eventFilter(QObject*, QEvent*)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Widgets.so		0x5db72978	
      18	QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Core.so		0x5d519586	
      19	QApplicationPrivate::notify_helper(QObject*, QEvent*)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Widgets.so		0x5db04232	
      20	QApplication::notify(QObject*, QEvent*)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Widgets.so		0x5db06d8e	
      21	QCoreApplication::notifyInternal(QObject*, QEvent*)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Core.so		0x5d519408	
      22	QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Widgets.so		0x5db06566	
      23	QWidgetWindow::handleMouseEvent(QMouseEvent*)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Widgets.so		0x5db2b4b8	
      24	QWidgetWindow::event(QEvent*)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Widgets.so		0x5db2bee2	
      25	QApplicationPrivate::notify_helper(QObject*, QEvent*)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Widgets.so		0x5db04242	
      26	QApplication::notify(QObject*, QEvent*)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Widgets.so		0x5db07664	
      27	QCoreApplication::notifyInternal(QObject*, QEvent*)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Core.so		0x5d519408	
      28	QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Gui.so		0x5d7d76b6	
      29	QGuiApplicationPrivate::processTouchEvent(QWindowSystemInterfacePrivate::TouchEvent*)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Gui.so		0x5d7d73d8	
      30	QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Gui.so		0x5d7d875e	
      31	QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Gui.so		0x5d7c9e84	
      32	QUnixEventDispatcherQPA::processEvents(QFlags<QEventLoop::ProcessEventsFlag>)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/plugins/platforms/android/libqtforandroid.so		0x5dd75f98	
      33	QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Core.so		0x5d51852c	
      34	QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Core.so		0x5d518c0e	
      35	QCoreApplication::exec()	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/lib/libQt5Core.so		0x5d51d522	
      36	main	main.cpp	52	0x5dde2d5c	
      37	startMainMethod(void*)	/home/eblomfel/releasetesting/540-105/5.4/android_armv7/plugins/platforms/android/libqtforandroid.so		0x5dd67086	
      38	__vfwprintf	libc.so		0x40142e04	
      39	??			0xe1f030b2	
      40	??			0xe1f030b2	
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            taipan BogDan Vatra
            esabraha Eskil Abrahamsen Blomfeldt
            Votes:
            2 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes