Fix crash when Android Style is set more than once.

Load again JSON document is it was freed.

Task-number: QTBUG-43111
Change-Id: I22f1de221371b49fec8b3d66ad5f0bd2af9656fe
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@theqtcompany.com>

cregit: 21101d9c52d2b7c6471f9814c9bff5aa87e22afc https://github.com/qt/qtbase/commit/21101d9c52d2b7c6471f9814c9bff5aa87e22afc