src/plugins/platforms/android/qandroidplatformtheme.h
@@ -1,8 +1,6 @@
 DECL|macro|QANDROIDPLATFORMTHEME_H
 DECL|member|QByteArray
-DECL|member|QByteArray
 DECL|member|m_QWidgetsFonts
-DECL|member|m_QWidgetsPalettes
 DECL|member|m_fonts
 DECL|member|m_palettes
 DECL|member|m_standardPalette
